function(memrpc_add_test target source)
  add_executable(${target} ${source})
  target_link_libraries(${target} PRIVATE memrpc GTest::gtest_main)
  add_test(NAME ${target} COMMAND ${target})
endfunction()

memrpc_add_test(memrpc_smoke_test smoke_test.cpp)
memrpc_add_test(memrpc_types_test types_test.cpp)
memrpc_add_test(memrpc_api_headers_test api_headers_test.cpp)
memrpc_add_test(memrpc_framework_split_headers_test framework_split_headers_test.cpp)
memrpc_add_test(memrpc_log_test log_test.cpp)
memrpc_add_test(memrpc_protocol_layout_test protocol_layout_test.cpp)
memrpc_add_test(memrpc_byte_codec_test byte_codec_test.cpp)
memrpc_add_test(memrpc_slot_pool_test slot_pool_test.cpp)
memrpc_add_test(memrpc_session_test session_test.cpp)
memrpc_add_test(memrpc_build_config_test build_config_test.cpp)
memrpc_add_test(memrpc_bootstrap_callback_test bootstrap_callback_test.cpp)
memrpc_add_test(memrpc_rpc_client_api_test rpc_client_api_test.cpp)
memrpc_add_test(memrpc_rpc_server_api_test rpc_server_api_test.cpp)
memrpc_add_test(memrpc_rpc_client_integration_test rpc_client_integration_test.cpp)
memrpc_add_test(memrpc_response_queue_event_test response_queue_event_test.cpp)
memrpc_add_test(memrpc_sa_bootstrap_stub_test sa_bootstrap_stub_test.cpp)
memrpc_add_test(memrpc_replay_classifier_test replay_classifier_test.cpp)
memrpc_add_test(memrpc_rpc_client_timeout_watchdog_test rpc_client_timeout_watchdog_test.cpp)
target_compile_definitions(memrpc_rpc_client_timeout_watchdog_test PRIVATE
  MEMRPC_ASYNC_WATCHDOG_INTERVAL_MS=20
)
memrpc_add_test(memrpc_rpc_client_idle_callback_test rpc_client_idle_callback_test.cpp)
