template("minirpc_test") {
  executable(target_name) {
    testonly = true
    sources = invoker.sources
    deps = [
      "//src:minirpc_demo",
      memrpc_gtest_main_target,
    ]
    configs += [ "//:memrpc_test_config" ]
  }
}

minirpc_test("memrpc_minirpc_headers_test") { sources = [ "minirpc_headers_test.cpp" ] }
minirpc_test("memrpc_minirpc_codec_test") { sources = [ "minirpc_codec_test.cpp" ] }
minirpc_test("memrpc_minirpc_service_test") { sources = [ "minirpc_service_test.cpp" ] }
minirpc_test("memrpc_minirpc_client_test") { sources = [ "minirpc_client_test.cpp" ] }
minirpc_test("memrpc_minirpc_throughput_test") { sources = [ "minirpc_throughput_test.cpp" ] }
minirpc_test("memrpc_minirpc_baseline_test") { sources = [ "minirpc_baseline_test.cpp" ] }
minirpc_test("memrpc_minirpc_latency_test") { sources = [ "minirpc_latency_test.cpp" ] }
minirpc_test("memrpc_minirpc_async_pipeline_test") { sources = [ "minirpc_async_pipeline_test.cpp" ] }
minirpc_test("memrpc_minirpc_backpressure_test") { sources = [ "minirpc_backpressure_test.cpp" ] }
minirpc_test("memrpc_minirpc_dfx_test") {
  sources = [
    "minirpc_dfx_test.cpp",
    "minirpc_resilient_invoker.cpp",
  ]
}

if (memrpc_enable_dt_tests) {
  minirpc_test("memrpc_minirpc_dt_stability_test") { sources = [ "minirpc_dt_stability_test.cpp" ] }
  minirpc_test("memrpc_minirpc_dt_perf_test") { sources = [ "minirpc_dt_perf_test.cpp" ] }
}

if (memrpc_enable_stress_tests) {
  source_set("minirpc_stress_config") {
    sources = [ "minirpc_stress_config.cpp" ]
    deps = [ "//src:minirpc_demo" ]
    public_configs = [ "//:memrpc_config" ]
    include_dirs = [ "//tests" ]
  }

  executable("memrpc_minirpc_stress_config_test") {
    testonly = true
    sources = [ "minirpc_stress_config_test.cpp" ]
    deps = [
      ":minirpc_stress_config",
      memrpc_gtest_main_target,
    ]
    configs += [ "//:memrpc_test_config" ]
  }

  executable("memrpc_minirpc_stress_runner") {
    testonly = true
    sources = [ "minirpc_stress_runner.cpp" ]
    deps = [
      ":minirpc_stress_config",
      "//src:minirpc_demo",
    ]
    configs += [ "//:memrpc_test_config" ]
  }
}

group("minirpc_tests") {
  deps = [
    ":memrpc_minirpc_headers_test",
    ":memrpc_minirpc_codec_test",
    ":memrpc_minirpc_service_test",
    ":memrpc_minirpc_client_test",
    ":memrpc_minirpc_throughput_test",
    ":memrpc_minirpc_baseline_test",
    ":memrpc_minirpc_latency_test",
    ":memrpc_minirpc_async_pipeline_test",
    ":memrpc_minirpc_backpressure_test",
    ":memrpc_minirpc_dfx_test",
  ]
  if (memrpc_enable_dt_tests) {
    deps += [
      ":memrpc_minirpc_dt_stability_test",
      ":memrpc_minirpc_dt_perf_test",
    ]
  }
  if (memrpc_enable_stress_tests) {
    deps += [
      ":memrpc_minirpc_stress_config_test",
      ":memrpc_minirpc_stress_runner",
    ]
  }
}
