function(minirpc_add_test target source)
  add_executable(${target} ${source})
  target_link_libraries(${target} PRIVATE minirpc_demo GTest::gtest_main)
  add_test(NAME ${target} COMMAND ${target})
endfunction()

minirpc_add_test(memrpc_minirpc_headers_test minirpc_headers_test.cpp)
minirpc_add_test(memrpc_minirpc_codec_test minirpc_codec_test.cpp)
minirpc_add_test(memrpc_minirpc_service_test minirpc_service_test.cpp)
minirpc_add_test(memrpc_minirpc_client_test minirpc_client_test.cpp)
minirpc_add_test(memrpc_minirpc_throughput_test minirpc_throughput_test.cpp)
minirpc_add_test(memrpc_minirpc_baseline_test minirpc_baseline_test.cpp)
minirpc_add_test(memrpc_minirpc_latency_test minirpc_latency_test.cpp)
minirpc_add_test(memrpc_minirpc_async_pipeline_test minirpc_async_pipeline_test.cpp)
minirpc_add_test(memrpc_minirpc_backpressure_test minirpc_backpressure_test.cpp)
minirpc_add_test(memrpc_minirpc_dfx_test minirpc_dfx_test.cpp)
